[package]
name = "collector"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
bevy = "0.17.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
